Revert "Merge branch 'feature/sort-chatroom' into 'server/develop'"
This reverts commit 1d8827fe9abac74ae413fc6289e73de8747a4173, reversing
changes made to f5b633be26b97dd4343c60e2fca4913f2a0329db.